--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   
 
   <!-- TODO include our flicklist.js script -->
-  <script src="???"></script>
+  <script src="js/flicklist.js">
+  
+  </script>
 
 </body> 
 </html>
